color scheme update

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
 				<div class="top_panel_wrap_inner top_panel_inner_style_1 top_panel_position_above">
 					<div class="top_panel_middle">
 						<div class="content_wrap">
-							<img src="images/logo.png" class="logo_main" alt="" width="50" height="50">
-							<div class="contact_logo">
+							<img src="images/logo/NOC logo.jpg" class="logo_main" alt="" width="50" height="50">
+							<!--<div class="contact_logo">
 								<div class="logo">
 									<a href="index.html"> North Omaha Collective
-										<!--<img src="images/logo.png" class="logo_main" alt="" width="118" height="69">-->
+										<img src="images/logo.png" class="logo_main" alt="" width="118" height="69">
 									</a>
 								</div>
-							</div>
+							</div>-->
 							<div class="contact_button">
 								<a class="first_button" href="our-causes.html">Donate</a><a class="second_button"
 									href="about-us-style-1.html">Become Volunteer</a>
@@ -247,7 +247,7 @@
 								data-param5="" data-param6="" data-param7="" data-param8="" data-param9=""
 								data-param10="" data-description="">
 								<!-- MAIN IMAGE -->
-								<img src="images/kidscrowdblurred.jpg" style="opacity: 0.8;" alt=""
+								<img src="images/kidscrowdblurred.jpg" style="opacity: 0.8!important;" alt=""
 									data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat"
 									class="rev-slidebg" data-no-retina>
 								<!-- LAYERS -->
@@ -514,7 +514,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="block_1473435558335">
+								<div class="block_our_logo">
 									<div class="column_container">
 										<div class="column-inner">
 											<div class="wrapper">
@@ -525,7 +525,7 @@
 															class="sc_services_title sc_item_title sc_item_title_without_descr">
 															Our Logo</h2>
 															
-															<div class="logo-section"><img src="images/logo/NOC logoLG.png" alt="" srcset="">
+															<div class="logo-section"><img src="images/logo/NOC logo.jpg" style="border-radius:100%" alt="" srcset="">
 																</div>
 													
 																<div class="sc_services_descr sc_item_descr">Symbolically, the tree represents the organizations and leaders that make up the North Omaha Collective (NOC). Together the NOC members stand tall and are grounded in the rich history and culture of the North Omaha Community. Like a strong tree, NOC provides protection, stability, strength, regeneration. and support for youth and families in North Omaha. 
@@ -585,7 +585,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="block_1473435558335">
+								<div class="block_who_we_are">
 									<div class="column_container">
 										<div class="column-inner">
 											<div class="wrapper">
@@ -1161,7 +1161,7 @@
 				<!-- </div> class="content_wrap"> -->
 			</div>
 			<!-- </.page_content_wrap> -->
-			<footer class="footer_wrap widget_area scheme_dark">
+			<!--<footer class="footer_wrap widget_area scheme_dark">
 				<div class="footer_wrap_inner widget_area_inner">
 					<div class="content_wrap">
 						<div class="columns_wrap">
@@ -1182,9 +1182,7 @@
 												ac.<br /><br /><span>hope@companyname.com</span></p>
 										</div>
 									</div>
-									<!-- /.contacts_wrap_inner -->
 								</div>
-								<!-- /.contacts_wrap -->
 							</div>
 							<div class="column-1_2 width_right">
 								<div class="columns_wrap">
@@ -1246,9 +1244,7 @@
 														<div class="sc_slider_pagination_wrap"></div>
 													</div>
 												</div>
-												<!-- /.sc_clients -->
 											</div>
-											<!-- /.sc_clients_wrap -->
 										</div>
 									</aside>
 									<aside id="text-3" class="widget_number_2 widget widget_text">
@@ -1268,7 +1264,6 @@
 												</div>
 												<div class="mc4wp-response"></div>
 											</form>
-											<!-- / MailChimp for WordPress Plugin -->
 										</div>
 									</aside>
 									<aside id="charity_is_hope_widget_socials-3"
@@ -1298,12 +1293,9 @@
 								</div>
 							</div>
 						</div>
-						<!-- /.columns_wrap -->
 					</div>
-					<!-- /.content_wrap -->
 				</div>
-				<!-- /.footer_wrap_inner -->
-			</footer>
+			</footer>-->
 			<!-- /.footer_wrap -->
 			<div class="copyright_wrap copyright_style_text  scheme_original">
 				<div class="copyright_wrap_inner">
