--- a/about-us.html
+++ b/about-us.html
@@ -2,7 +2,7 @@
 <html lang="en-US" class="scheme_original">
 
 <head>
-	<title>About Us Style 2 &#8211; Hope</title>
+	<title>Our Team</title>
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta name="format-detection" content="telephone=no">
@@ -48,14 +48,14 @@
 				<div class="top_panel_wrap_inner top_panel_inner_style_1 top_panel_position_above">
 					<div class="top_panel_middle">
 						<div class="content_wrap">
-							<img src="images/logo.png" class="logo_main" alt="" width="50" height="50">
-							<div class="contact_logo">
+							<img src="images/logo/NOC logo.jpg" class="logo_main" alt="" width="50" height="50">
+							<!--<div class="contact_logo">
 								<div class="logo">
 									<a href="index.html"> North Omaha Collective
-										<!--<img src="images/logo.png" class="logo_main" alt="" width="118" height="69">-->
+										<img src="images/logo.png" class="logo_main" alt="" width="118" height="69">
 									</a>
 								</div>
-							</div>
+							</div>-->
 							<div class="contact_button">
 								<a class="first_button" href="our-causes.html">Donate</a><a class="second_button"
 									href="about-us-style-1.html">Become Volunteer</a>
@@ -832,149 +832,7 @@
 				<!-- </div> class="content_wrap"> -->
 			</div>
 			<!-- </.page_content_wrap> -->
-			<footer class="footer_wrap widget_area scheme_dark">
-				<div class="footer_wrap_inner widget_area_inner">
-					<div class="content_wrap">
-						<div class="columns_wrap">
-							<div class="column-1_2">
-								<div class="contacts_wrap">
-									<div class="contacts_wrap_inner">
-										<div class="logo">
-											<a href="index.html"><img src="images/logo-footer.png" class="logo_footer"
-													alt="" width="237" height="121"></a>
-										</div>
-										<div class="contacts_address">
-											<p>Nulla fringilla orci mauris, nec tempor lectus consequat ac. Nulla
-												consectetur magna in velit pellentesque egestas sed eget nibh. Fusce nec
-												viverra dolor. Phasellus faucibus egestas nulla, vel suscipit metus
-												maximus id. Phasellus blandit porttitor
-												placerat. <br /><br />Donec malesuada ultricies ante at congue. Integer
-												nec faucibus quam. Phasellus posuere nisi
-												ac.<br /><br /><span>hope@companyname.com</span></p>
-										</div>
-									</div>
-									<!-- /.contacts_wrap_inner -->
-								</div>
-								<!-- /.contacts_wrap -->
-							</div>
-							<div class="column-1_2 width_right">
-								<div class="columns_wrap">
-									<aside id="text-4" class="widget_number_1 widget widget_text">
-										<h5 class="widget_title">our partners</h5>
-										<div class="textwidget">
-											<div id="sc_clients_2005326891_wrap" class="sc_clients_wrap">
-												<div id="sc_clients_2005326891"
-													class="sc_clients sc_clients_style_clients-1 ">
-													<div class="sc_slider_swiper swiper-slider-container sc_slider_nopagination sc_slider_nocontrols"
-														data-interval="5950" data-slides-per-view="5"
-														data-slides-min-width="100">
-														<div class="slides swiper-wrapper">
-															<div class="swiper-slide">
-																<div id="sc_clients_2005326891_1"
-																	class="sc_clients_item sc_clients_item_1 odd first">
-																	<div class="sc_client_image"><img width="90"
-																			height="90" alt="partner-2.png"
-																			src="images/partner-2.png"></div>
-																</div>
-															</div>
-															<div class="swiper-slide">
-																<div id="sc_clients_2005326891_2"
-																	class="sc_clients_item sc_clients_item_2 even">
-																	<div class="sc_client_image"><img width="90"
-																			height="90" alt="partner-1.png"
-																			src="images/partner-1.png"></div>
-																</div>
-															</div>
-															<div class="swiper-slide">
-																<div id="sc_clients_2005326891_3"
-																	class="sc_clients_item sc_clients_item_3 odd">
-																	<div class="sc_client_image"><img width="90"
-																			height="90" alt="partner-3.png"
-																			src="images/partner-3.png"></div>
-																</div>
-															</div>
-															<div class="swiper-slide">
-																<div id="sc_clients_2005326891_4"
-																	class="sc_clients_item sc_clients_item_4 even">
-																	<div class="sc_client_image"><img width="90"
-																			height="90" alt="partner-4.png"
-																			src="images/partner-4.png"></div>
-																</div>
-															</div>
-															<div class="swiper-slide">
-																<div id="sc_clients_2005326891_5"
-																	class="sc_clients_item sc_clients_item_5 odd">
-																	<div class="sc_client_image"><img width="90"
-																			height="90" alt="partner-5.png"
-																			src="images/partner-5.png"></div>
-																</div>
-															</div>
-														</div>
-														<div class="sc_slider_controls_wrap">
-															<a class="sc_slider_prev" href="#"></a>
-															<a class="sc_slider_next" href="#"></a>
-														</div>
-														<div class="sc_slider_pagination_wrap"></div>
-													</div>
-												</div>
-												<!-- /.sc_clients -->
-											</div>
-											<!-- /.sc_clients_wrap -->
-										</div>
-									</aside>
-									<aside id="text-3" class="widget_number_2 widget widget_text">
-										<h5 class="widget_title">newslettter sign-up</h5>
-										<div class="textwidget">
-											<form id="mc4wp-form-1" class="mc4wp-form mc4wp-form-532" method="post"
-												data-id="532" data-name="form">
-												<div class="mc4wp-form-fields"><input type="email" name="EMAIL"
-														placeholder="Email" required /><input type="submit"
-														value="Subcribe" />
-													<div class="hidden"><input type="text" name="_mc4wp_honeypot"
-															value="" tabindex="-1" autocomplete="off" /></div><input
-														type="hidden" name="_mc4wp_timestamp"
-														value="1481283353" /><input type="hidden" name="_mc4wp_form_id"
-														value="532" /><input type="hidden" name="_mc4wp_form_element_id"
-														value="mc4wp-form-1" />
-												</div>
-												<div class="mc4wp-response"></div>
-											</form>
-											<!-- / MailChimp for WordPress Plugin -->
-										</div>
-									</aside>
-									<aside id="charity_is_hope_widget_socials-3"
-										class="widget_number_3 widget widget_socials">
-										<h5 class="widget_title">Connect With Us</h5>
-										<div class="widget_inner">
-											<div
-												class="sc_socials sc_socials_type_icons sc_socials_shape_square sc_socials_size_small">
-												<div class="sc_socials_item"><a href="#" target="_blank"
-														class="social_icons social_twitter"><span
-															class="icon-twitter"></span></a></div>
-												<div class="sc_socials_item"><a href="#" target="_blank"
-														class="social_icons social_facebook"><span
-															class="icon-facebook"></span></a></div>
-												<div class="sc_socials_item"><a href="#" target="_blank"
-														class="social_icons social_vine"><span
-															class="icon-vine"></span></a></div>
-												<div class="sc_socials_item"><a href="#" target="_blank"
-														class="social_icons social_youtube"><span
-															class="icon-youtube"></span></a></div>
-												<div class="sc_socials_item"><a href="#" target="_blank"
-														class="social_icons social_pinterest-circled"><span
-															class="icon-pinterest-circled"></span></a></div>
-											</div>
-										</div>
-									</aside>
-								</div>
-							</div>
-						</div>
-						<!-- /.columns_wrap -->
-					</div>
-					<!-- /.content_wrap -->
-				</div>
-				<!-- /.footer_wrap_inner -->
-			</footer>
+			
 			<!-- /.footer_wrap -->
 			<div class="copyright_wrap copyright_style_text  scheme_original">
 				<div class="copyright_wrap_inner">
